# handshake-browser-android

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
docs/: architecture.md  milestones.md  plan.md  play-store-readiness.md  production-readiness-audit.md  reference-links.md  security-model.md  version-audit.md
fixtures/: README.md
fixtures/dns/: README.md
fixtures/headers/: README.md
fixtures/urkel/: README.md
rust/: Cargo.toml  deny.toml
rust/.config/: nextest.toml
rust/crates/android-ffi/: Cargo.toml
rust/crates/hns-cache/: Cargo.toml
rust/crates/hns-chain/: Cargo.toml
rust/crates/hns-core/: Cargo.toml
rust/crates/hns-core/src/: bytes.rs  dns.rs  hash.rs  header.rs  lib.rs  network.rs  pow.rs  resource.rs
rust/crates/hns-dane/: Cargo.toml
rust/crates/hns-dnssec/: Cargo.toml
rust/crates/hns-gateway/: Cargo.toml
rust/crates/hns-p2p/: Cargo.toml
rust/crates/hns-resolver/: Cargo.toml
rust/crates/hns-resolver/src/: lib.rs
rust/crates/hns-sync/: Cargo.toml
rust/crates/hns-sync/src/: lib.rs
rust/crates/hns-transport/: Cargo.toml
rust/crates/hns-transport/src/: lib.rs
rust/crates/hns-urkel/: Cargo.toml
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: dns_message.rs  hns_resource.rs  p2p_frame.rs  tlsa_record.rs  (+1 more)
scripts/: audit-versions.sh  build-android.sh  build-rust-android.sh  build-rust.sh  check.sh  fuzz-smoke.sh  play-upload-closed-testing.sh
(+47 files in other folders)
