[package]
name = "hns-core"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake2.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
sha3.workspace = true
thiserror.workspace = true
